lib/utils/note-parser.js
/* eslint-disable */
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
	(function() {
		function peg$subclass(child, parent) {
			function ctor() { this.constructor = child; }
			ctor.prototype = parent.prototype;
			child.prototype = new ctor();
		}

		function peg$SyntaxError(message, expected, found, location) {
			this.message  = message;
			this.expected = expected;
			this.found    = found;
			this.location = location;
			this.name     = "SyntaxError";

			if (typeof Error.captureStackTrace === "function") {
				Error.captureStackTrace(this, peg$SyntaxError);
			}
		}

		peg$subclass(peg$SyntaxError, Error);

		peg$SyntaxError.buildMessage = function(expected, found) {
			var DESCRIBE_EXPECTATION_FNS = {
				literal: function(expectation) {
					return "\"" + literalEscape(expectation.text) + "\"";
				},

				"class": function(expectation) {
					var escapedParts = "",
						i;

					for (i = 0; i < expectation.parts.length; i++) {
						escapedParts += expectation.parts[i] instanceof Array
							? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
							: classEscape(expectation.parts[i]);
					}

					return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
				},

				any: function(expectation) {
					return "any character";
				},

				end: function(expectation) {
					return "end of input";
				},

				other: function(expectation) {
					return expectation.description;
				}
			};

			function hex(ch) {
				return ch.charCodeAt(0).toString(16).toUpperCase();
			}

			function literalEscape(s) {
				return s
					.replace(/\\/g, '\\\\')
					.replace(/"/g,  '\\"')
					.replace(/\0/g, '\\0')
					.replace(/\t/g, '\\t')
					.replace(/\n/g, '\\n')
					.replace(/\r/g, '\\r')
					.replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
					.replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
			}

			function classEscape(s) {
				return s
					.replace(/\\/g, '\\\\')
					.replace(/\]/g, '\\]')
					.replace(/\^/g, '\\^')
					.replace(/-/g,  '\\-')
					.replace(/\0/g, '\\0')
					.replace(/\t/g, '\\t')
					.replace(/\n/g, '\\n')
					.replace(/\r/g, '\\r')
					.replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
					.replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
			}

			function describeExpectation(expectation) {
				return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
			}

			function describeExpected(expected) {
				var descriptions = new Array(expected.length),
					i, j;

				for (i = 0; i < expected.length; i++) {
					descriptions[i] = describeExpectation(expected[i]);
				}

				descriptions.sort();

				if (descriptions.length > 0) {
					for (i = 1, j = 1; i < descriptions.length; i++) {
						if (descriptions[i - 1] !== descriptions[i]) {
							descriptions[j] = descriptions[i];
							j++;
						}
					}
					descriptions.length = j;
				}

				switch (descriptions.length) {
					case 1:
						return descriptions[0];

					case 2:
						return descriptions[0] + " or " + descriptions[1];

					default:
						return descriptions.slice(0, -1).join(", ")
							+ ", or "
							+ descriptions[descriptions.length - 1];
				}
			}

			function describeFound(found) {
				return found ? "\"" + literalEscape(found) + "\"" : "end of input";
			}

			return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
		};

		function peg$parse(input, options) {
			options = options !== void 0 ? options : {};

			var peg$FAILED = {},

				peg$startRuleFunctions = { Lines: peg$parseLines },
				peg$startRuleFunction  = peg$parseLines,

				peg$c0 = function(l) { return l },
				peg$c1 = function(ls, l) { return ls.concat( l ) },
				peg$c2 = function(ts) {
					const tokens = ts.reduce(
						function(out, next) {
							return typeof next === 'string' && typeof out[1] === 'string'
								? [ out[0].slice(0, -1).concat( out[0].slice(-1).concat( next ).join('') ), next ]
								: [ out[0].concat( next ), next ];
						},
						[[], undefined]
					)

					return tokens[0].map( function( token ) {
						const value = typeof token === 'string'
							? { type: 'text', text: token }
							: token;

						return Object.assign( { location: offsets( location() ) }, value )
					} )
				},
				peg$c3 = "#",
				peg$c4 = peg$literalExpectation("#", false),
				peg$c5 = function(h) { return { hs: h, location: location() } },
				peg$c6 = /^[^\n]/,
				peg$c7 = peg$classExpectation(["\n"], true, false),
				peg$c8 = function(l, t) { return l.hs.length <= 6 },
				peg$c9 = function(l, t) { return {
					type: 'header',
					level: l.hs.length,
					text: t.join(''),
					location: offsets( location() ),
					hashLocation: offsets( l.location )
				} },
				peg$c10 = function(i, q) { return {
					type: 'blockquote',
					text: q.join(''),
					level: i.level,
					location: offsets( location() ),
					indentLocation: i.location,
				} },
				peg$c11 = ">",
				peg$c12 = peg$literalExpectation(">", false),
				peg$c13 = function(l) { return {
					level: 1 + l.length,
					location: offsets( location() )
				} },
				peg$c14 = /^[\-*]/,
				peg$c15 = peg$classExpectation(["-", "*"], false, false),
				peg$c16 = function() { return location() },
				peg$c17 = " ",
				peg$c18 = peg$literalExpectation(" ", false),
				peg$c19 = function(b, s) { return {
					type: 'list-bullet',
					location: offsets( location() ),
					bulletLocation: offsets( b )
				} },
				peg$c20 = "- [",
				peg$c21 = peg$literalExpectation("- [", false),
				peg$c22 = /^[xX]/,
				peg$c23 = peg$classExpectation(["x", "X"], false, false),
				peg$c24 = function(d) { return d },
				peg$c25 = "]",
				peg$c26 = peg$literalExpectation("]", false),
				peg$c27 = function(d) { return { isDone: d !== ' ', l: location() } },
				peg$c28 = function(b, t) { return {
					type: 'todo-bullet',
					text: t.join(''),
					isDone: b.isDone,
					location: offsets( location() ),
					bulletLocation: offsets( b.l )
				} },
				peg$c29 = "**",
				peg$c30 = peg$literalExpectation("**", false),
				peg$c31 = peg$anyExpectation(),
				peg$c32 = function(c) { return c },
				peg$c33 = function(s) { return {
					type: 'strong',
					text: s.join(''),
					location: offsets( location() )
				} },
				peg$c34 = "__",
				peg$c35 = peg$literalExpectation("__", false),
				peg$c36 = "*",
				peg$c37 = peg$literalExpectation("*", false),
				peg$c38 = /^[^*]/,
				peg$c39 = peg$classExpectation(["*"], true, false),
				peg$c40 = function(s) { return {
					type: 'em',
					text: s.join(''),
					location: offsets( location() )
				} },
				peg$c41 = "_",
				peg$c42 = peg$literalExpectation("_", false),
				peg$c43 = /^[^_]/,
				peg$c44 = peg$classExpectation(["_"], true, false),
				peg$c45 = "~~",
				peg$c46 = peg$literalExpectation("~~", false),
				peg$c47 = function(s) { return {
					type: 'strike',
					text: s.join(''),
					location: offsets( location() )
				} },
				peg$c48 = "`",
				peg$c49 = peg$literalExpectation("`", false),
				peg$c50 = /^[^`]/,
				peg$c51 = peg$classExpectation(["`"], true, false),
				peg$c52 = function(s) { return {
					type: 'code-inline',
					text: s.join(''),
					location: offsets( location() )
				} },
				peg$c53 = "@",
				peg$c54 = peg$literalExpectation("@", false),
				peg$c55 = function() { return offsets( location() ) },
				peg$c56 = /^[a-zA-Z]/,
				peg$c57 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
				peg$c58 = /^[a-zA-Z0-9]/,
				peg$c59 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
				peg$c60 = function(at, head, tail) { return {
					type: 'at-mention',
					text: [head].concat(tail).join(''),
					location: offsets( location() ),
					atLocation: at
				} },
				peg$c61 = "://",
				peg$c62 = peg$literalExpectation("://", false),
				peg$c63 = "/",
				peg$c64 = peg$literalExpectation("/", false),
				peg$c65 = function(scheme, host, slash, path) { return {
					type: 'link',
					text: '',
					url: scheme + '://' + [ host, slash, path ].join(''),
					urlLocation: offsets( location() ),
					location: offsets( location() )
				} },
				peg$c66 = /^[a-z]/,
				peg$c67 = peg$classExpectation([["a", "z"]], false, false),
				peg$c68 = /^[a-z0-9+.\-]/,
				peg$c69 = peg$classExpectation([["a", "z"], ["0", "9"], "+", ".", "-"], false, false),
				peg$c70 = function(s, ss) { return s + ss.join('') },
				peg$c71 = ".",
				peg$c72 = peg$literalExpectation(".", false),
				peg$c73 = function(pp, p) { return p },
				peg$c74 = function(pp, ps) { return [pp].concat( ps ).join('.') },
				peg$c75 = /^[0-9a-z\-_~]/,
				peg$c76 = peg$classExpectation([["0", "9"], ["a", "z"], "-", "_", "~"], false, false),
				peg$c77 = function(cs) { return cs.join('') },
				peg$c78 = function(p, t) { return [p, t].join('') },
				peg$c79 = function(ps) { return ps.join('') },
				peg$c80 = function(c, ccs) { return '.' + ccs.join('') },
				peg$c81 = function(c, cs) { return [c.join('')].concat( cs ).join('') },
				peg$c82 = /^[a-z0-9\-_~]/,
				peg$c83 = peg$classExpectation([["a", "z"], ["0", "9"], "-", "_", "~"], false, false),
				peg$c84 = "<a",
				peg$c85 = peg$literalExpectation("<a", false),
				peg$c86 = "</a>",
				peg$c87 = peg$literalExpectation("</a>", false),
				peg$c88 = function(al, c) { return c },
				peg$c89 = function(al, t) { return { t: t, l: location() } },
				peg$c90 = function(al, text) { return {
					type: 'link',
					text: text.t.join(''),
					url: al.find( a => 'href' === a.name ).value,
					urlLocation: al.find( a => 'href' === a.name ).location,
					titleLocation: offsets( text.l ),
					location: offsets( location() )
				} },
				peg$c91 = function(a) { return a },
				peg$c92 = function(as, a) { return as.concat( a ) },
				peg$c93 = "=",
				peg$c94 = peg$literalExpectation("=", false),
				peg$c95 = function(name, v) { return { v: v.s, l: v.l } },
				peg$c96 = function(name, value) { return {
					name: name.join(''),
					value: value.v,
					location: value.l
				} },
				peg$c97 = "\"",
				peg$c98 = peg$literalExpectation("\"", false),
				peg$c99 = "\\\"",
				peg$c100 = peg$literalExpectation("\\\"", false),
				peg$c101 = function(s) { return { v: s.join(''), l: location() } },
				peg$c102 = function(string) { return { s: string.v, l: offsets( string.l ) } },
				peg$c103 = "'",
				peg$c104 = peg$literalExpectation("'", false),
				peg$c105 = "\\'",
				peg$c106 = peg$literalExpectation("\\'", false),
				peg$c107 = function(t, u) { return {
					type: 'link',
					text: t.text,
					titleLocation: t.location,
					titleTextLocation: t.textLocation,
					url: u.url,
					linkLocation: u.location,
					urlLocation: u.urlLocation,
					location: offsets( location() )
				} },
				peg$c108 = "[",
				peg$c109 = peg$literalExpectation("[", false),
				peg$c110 = /^[^\]]/,
				peg$c111 = peg$classExpectation(["]"], true, false),
				peg$c112 = function(t) { return { t: t, l: location() } },
				peg$c113 = function(t) { return {
					text: t.t.join(''),
					textLocation: offsets( t.l ),
					location: offsets( location() )
				} },
				peg$c114 = "(",
				peg$c115 = peg$literalExpectation("(", false),
				peg$c116 = /^[^)]/,
				peg$c117 = peg$classExpectation([")"], true, false),
				peg$c118 = function(u) { return { u: u, l: location() } },
				peg$c119 = ")",
				peg$c120 = peg$literalExpectation(")", false),
				peg$c121 = function(url) { return {
					url: url.u.join(''),
					urlLocation: offsets( url.l ),
					location: offsets( location() )
				} },
				peg$c122 = /^[\n]/,
				peg$c123 = peg$classExpectation(["\n"], false, false),
				peg$c124 = /^[ \t]/,
				peg$c125 = peg$classExpectation([" ", "\t"], false, false),

				peg$currPos          = 0,
				peg$savedPos         = 0,
				peg$posDetailsCache  = [{ line: 1, column: 1 }],
				peg$maxFailPos       = 0,
				peg$maxFailExpected  = [],
				peg$silentFails      = 0,

				peg$resultsCache = {},

				peg$result;

			if ("startRule" in options) {
				if (!(options.startRule in peg$startRuleFunctions)) {
					throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
				}

				peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
			}

			function text() {
				return input.substring(peg$savedPos, peg$currPos);
			}

			function location() {
				return peg$computeLocation(peg$savedPos, peg$currPos);
			}

			function expected(description, location) {
				location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

				throw peg$buildStructuredError(
					[peg$otherExpectation(description)],
					input.substring(peg$savedPos, peg$currPos),
					location
				);
			}

			function error(message, location) {
				location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

				throw peg$buildSimpleError(message, location);
			}

			function peg$literalExpectation(text, ignoreCase) {
				return { type: "literal", text: text, ignoreCase: ignoreCase };
			}

			function peg$classExpectation(parts, inverted, ignoreCase) {
				return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
			}

			function peg$anyExpectation() {
				return { type: "any" };
			}

			function peg$endExpectation() {
				return { type: "end" };
			}

			function peg$otherExpectation(description) {
				return { type: "other", description: description };
			}

			function peg$computePosDetails(pos) {
				var details = peg$posDetailsCache[pos], p;

				if (details) {
					return details;
				} else {
					p = pos - 1;
					while (!peg$posDetailsCache[p]) {
						p--;
					}

					details = peg$posDetailsCache[p];
					details = {
						line:   details.line,
						column: details.column
					};

					while (p < pos) {
						if (input.charCodeAt(p) === 10) {
							details.line++;
							details.column = 1;
						} else {
							details.column++;
						}

						p++;
					}

					peg$posDetailsCache[pos] = details;
					return details;
				}
			}

			function peg$computeLocation(startPos, endPos) {
				var startPosDetails = peg$computePosDetails(startPos),
					endPosDetails   = peg$computePosDetails(endPos);

				return {
					start: {
						offset: startPos,
						line:   startPosDetails.line,
						column: startPosDetails.column
					},
					end: {
						offset: endPos,
						line:   endPosDetails.line,
						column: endPosDetails.column
					}
				};
			}

			function peg$fail(expected) {
				if (peg$currPos < peg$maxFailPos) { return; }

				if (peg$currPos > peg$maxFailPos) {
					peg$maxFailPos = peg$currPos;
					peg$maxFailExpected = [];
				}

				peg$maxFailExpected.push(expected);
			}

			function peg$buildSimpleError(message, location) {
				return new peg$SyntaxError(message, null, null, location);
			}

			function peg$buildStructuredError(expected, found, location) {
				return new peg$SyntaxError(
					peg$SyntaxError.buildMessage(expected, found),
					expected,
					found,
					location
				);
			}

			function peg$parseLines() {
				var s0, s1, s2, s3, s4;

				var key    = peg$currPos * 30 + 0,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}

				s0 = peg$currPos;
				s1 = [];
				s2 = peg$currPos;
				s3 = peg$parseLine();
				if (s3 !== peg$FAILED) {
					s4 = peg$parseEOL();
					if (s4 !== peg$FAILED) {
						peg$savedPos = s2;
						s3 = peg$c0(s3);
						s2 = s3;
					} else {
						peg$currPos = s2;
						s2 = peg$FAILED;
					}
				} else {
					peg$currPos = s2;
					s2 = peg$FAILED;
				}
				while (s2 !== peg$FAILED) {
					s1.push(s2);
					s2 = peg$currPos;
					s3 = peg$parseLine();
					if (s3 !== peg$FAILED) {
						s4 = peg$parseEOL();
						if (s4 !== peg$FAILED) {
							peg$savedPos = s2;
							s3 = peg$c0(s3);
							s2 = s3;
						} else {
							peg$currPos = s2;
							s2 = peg$FAILED;
						}
					} else {
						peg$currPos = s2;
						s2 = peg$FAILED;
					}
				}
				if (s1 !== peg$FAILED) {
					s2 = peg$parseLine();
					if (s2 !== peg$FAILED) {
						peg$savedPos = s0;
						s1 = peg$c1(s1, s2);
						s0 = s1;
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}

				peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

				return s0;
			}

			function peg$parseLine() {
				var s0, s1, s2;

				var key    = peg$currPos * 30 + 1,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}

				s0 = peg$parseHeader();
				if (s0 === peg$FAILED) {
					s0 = peg$parseBlockQuote();
					if (s0 === peg$FAILED) {
						s0 = peg$parseToDoItem();
						if (s0 === peg$FAILED) {
							s0 = peg$parseBulletItem();
							if (s0 === peg$FAILED) {
								s0 = peg$currPos;
								s1 = [];
								s2 = peg$parseToken();
								while (s2 !== peg$FAILED) {
									s1.push(s2);
									s2 = peg$parseToken();
								}
								if (s1 !== peg$FAILED) {
									peg$savedPos = s0;
									s1 = peg$c2(s1);
								}
								s0 = s1;
							}
						}
					}
				}

				peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

				return s0;
			}

			function peg$parseHeader() {
				var s0, s1, s2, s3;

				var key    = peg$currPos * 30 + 2,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}

				s0 = peg$currPos;
				s1 = peg$currPos;
				s2 = [];
				if (input.charCodeAt(peg$currPos) === 35) {
					s3 = peg$c3;
					peg$currPos++;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c4); }
				}
				if (s3 !== peg$FAILED) {
					while (s3 !== peg$FAILED) {
						s2.push(s3);
						if (input.charCodeAt(peg$currPos) === 35) {
							s3 = peg$c3;
							peg$currPos++;
						} else {
							s3 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c4); }
						}
					}
				} else {
					s2 = peg$FAILED;
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s1;
					s2 = peg$c5(s2);
				}
				s1 = s2;
				if (s1 !== peg$FAILED) {
					s2 = [];
					if (peg$c6.test(input.charAt(peg$currPos))) {
						s3 = input.charAt(peg$currPos);
						peg$currPos++;
					} else {
						s3 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c7); }
					}
					while (s3 !== peg$FAILED) {
						s2.push(s3);
						if (peg$c6.test(input.charAt(peg$currPos))) {
							s3 = input.charAt(peg$currPos);
							peg$currPos++;
						} else {
							s3 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c7); }
						}
					}
					if (s2 !== peg$FAILED) {
						peg$savedPos = peg$currPos;
						s3 = peg$c8(s1, s2);
						if (s3) {
							s3 = void 0;
						} else {
							s3 = peg$FAILED;
						}
						if (s3 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c9(s1, s2);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}

				peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

				return s0;
			}

			function peg$parseBlockQuote() {
				var s0, s1, s2, s3, s4;

				var key    = peg$currPos * 30 + 3,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}

				s0 = peg$currPos;
				s1 = peg$parseBlockQuoteIndents();
				if (s1 !== peg$FAILED) {
					s2 = [];
					s3 = peg$parse_();
					while (s3 !== peg$FAILED) {
						s2.push(s3);
						s3 = peg$parse_();
					}
					if (s2 !== peg$FAILED) {
						s3 = [];
						if (peg$c6.test(input.charAt(peg$currPos))) {
							s4 = input.charAt(peg$currPos);
							peg$currPos++;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c7); }
						}
						if (s4 !== peg$FAILED) {
							while (s4 !== peg$FAILED) {
								s3.push(s4);
								if (peg$c6.test(input.charAt(peg$currPos))) {
									s4 = input.charAt(peg$currPos);
									peg$currPos++;
								} else {
									s4 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c7); }
								}
							}
						} else {
							s3 = peg$FAILED;
						}
						if (s3 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c10(s1, s3);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}

				peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

				return s0;
			}

			function peg$parseBlockQuoteIndents() {
				var s0, s1, s2, s3, s4, s5;

				var key    = peg$currPos * 30 + 4,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}

				s0 = peg$currPos;
				if (input.charCodeAt(peg$currPos) === 62) {
					s1 = peg$c11;
					peg$currPos++;
				} else {
					s1 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c12); }
				}
				if (s1 !== peg$FAILED) {
					s2 = [];
					s3 = peg$currPos;
					s4 = [];
					s5 = peg$parse_();
					while (s5 !== peg$FAILED) {
						s4.push(s5);
						s5 = peg$parse_();
					}
					if (s4 !== peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 62) {
							s5 = peg$c11;
							peg$currPos++;
						} else {
							s5 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c12); }
						}
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5];
							s3 = s4;
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
					while (s3 !== peg$FAILED) {
						s2.push(s3);
						s3 = peg$currPos;
						s4 = [];
						s5 = peg$parse_();
						while (s5 !== peg$FAILED) {
							s4.push(s5);
							s5 = peg$parse_();
						}
						if (s4 !== peg$FAILED) {
							if (input.charCodeAt(peg$currPos) === 62) {
								s5 = peg$c11;
								peg$currPos++;
							} else {
								s5 = peg$FAILED;
								if (peg$silentFails === 0) { peg$fail(peg$c12); }
							}
							if (s5 !== peg$FAILED) {
								s4 = [s4, s5];
								s3 = s4;
							} else {
								peg$currPos = s3;
								s3 = peg$FAILED;
							}
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					}
					if (s2 !== peg$FAILED) {
						peg$savedPos = s0;
						s1 = peg$c13(s2);
						s0 = s1;
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}

				peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

				return s0;
			}

			function peg$parseBulletItem() {
				var s0, s1, s2, s3, s4, s5;

				var key    = peg$currPos * 30 + 5,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}

				s0 = peg$currPos;
				s1 = peg$parse__();
				if (s1 !== peg$FAILED) {
					s2 = peg$currPos;
					if (peg$c14.test(input.charAt(peg$currPos))) {
						s3 = input.charAt(peg$currPos);
						peg$currPos++;
					} else {
						s3 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c15); }
					}
					if (s3 !== peg$FAILED) {
						peg$savedPos = s2;
						s3 = peg$c16();
					}
					s2 = s3;
					if (s2 !== peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 32) {
							s3 = peg$c17;
							peg$currPos++;
						} else {
							s3 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c18); }
						}
						if (s3 !== peg$FAILED) {
							s4 = [];
							if (peg$c6.test(input.charAt(peg$currPos))) {
								s5 = input.charAt(peg$currPos);
								peg$currPos++;
							} else {
								s5 = peg$FAILED;
								if (peg$silentFails === 0) { peg$fail(peg$c7); }
							}
							if (s5 !== peg$FAILED) {
								while (s5 !== peg$FAILED) {
									s4.push(s5);
									if (peg$c6.test(input.charAt(peg$currPos))) {
										s5 = input.charAt(peg$currPos);
										peg$currPos++;
									} else {
										s5 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c7); }
									}
								}
							} else {
								s4 = peg$FAILED;
							}
							if (s4 !== peg$FAILED) {
								peg$savedPos = s0;
								s1 = peg$c19(s2, s4);
								s0 = s1;
							} else {
								peg$currPos = s0;
								s0 = peg$FAILED;
							}
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}

				peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

				return s0;
			}

			function peg$parseToDoItem() {
				var s0, s1, s2, s3, s4, s5;

				var key    = peg$currPos * 30 + 6,
					cached = peg$resultsCache[key];

				if (cached) {
					peg$currPos = cached.nextPos;

					return cached.result;
				}
